--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="skill-row">
           <img class="skip" src="images/skip.jpeg" alt="">
           <h3>Fitness</h3>
-          <p class="text">I love to stay fit and I'm pretty good at skipping with a record of 1754 skips in 18min. My current goal is to look like cbum but I like Noel Deyzel.</p>
+          <p class="text">I love to stay fit and I'm pretty good at skipping with a record of 1754 skips in 18min. I love Daddy Noel Deyzel🥵🥵🥵.</p>
         </div>
 
         <div class="skill-row">
